<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/search_bar"
            android:name="br.ufpr.ws_mutantes.fragments.SearchFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_search" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/mainScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/main_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/registered_heroes"
                        style="@style/Theme.Heroes.Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="Mutantes Cadastrados: " />

                    <TextView
                        android:id="@+id/top_abilities_text"
                        style="@style/Theme.Heroes.Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="@string/top_abilities" />

                    <org.apmem.tools.layouts.FlowLayout
                        android:id="@+id/mutant_abilities"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <Button
                            android:id="@+id/ability_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:background="@drawable/ability_background"
                            android:text="Button"
                            app:backgroundTint="@color/primary" />

                        <Button
                            android:id="@+id/ability_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:background="@drawable/ability_background"
                            android:text="Button"
                            app:backgroundTint="@color/secondary" />

                        <Button
                            android:id="@+id/ability_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:background="@drawable/ability_background"
                            android:text="Button"
                            app:backgroundTint="@color/third" />
                    </org.apmem.tools.layouts.FlowLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="4dp">

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/Theme.Heroes.Subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mutant_list" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:minWidth="32dp"
                            android:minHeight="35dp"
                            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/heroesList"
                    android:name="br.ufpr.ws_mutantes.fragments.HeroCardFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout="@layout/fragment_hero_card_list" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addHeroFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/addMutant"
        android:focusable="true"
        android:onClick="createHero"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>